pr trigger added

--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -1,7 +1,13 @@
 name: "Testing secret on fork"
 on:
   push:
-    
+  pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
+      - labeled
+      
 jobs:
   secret-testing:
     runs-on: ubuntu-latest
