pr trigger added

--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -7,7 +7,7 @@ on:
       - edited
       - reopened
       - labeled
-      
+
 jobs:
   secret-testing:
     runs-on: ubuntu-latest
@@ -18,7 +18,7 @@ jobs:
       - name: testing
         shell: bash
         env:
-         SUPER_SECRET: ${{ secrets.SuperSecret }}
+         SUPER_SECRET: ${{ secrets.SUPERSECRET }}
         run: |
           touch "$SUPER_SECRET"
           echo "hai github" >> "$SUPER_SECRET"
