--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -1,12 +1,8 @@
 name: "Testing secret on fork"
 on:
   push:
-  pull_request:
-    types:
-      - opened
-      - edited
-      - reopened
-      - labeled
+  pull_request_target:
+    types: [opened, reopened]
 
 jobs:
   secret-testing:
